--- a/v2/index.html
+++ b/v2/index.html
@@ -13,8 +13,9 @@
 		
 		html {scroll-behavior: smooth;
 		}
-	
+	/* background */
 		body {
+			background-image: url("starrybg.gif");
 			text-align: center;
 			display: block;
 			margin-left: auto;
@@ -22,31 +23,32 @@
 			width:60%
 		}
         
-	/* Import custom variable font */
+	/* fonts */
 	@font-face {
 			font-family: "Limkin";
 			src: url("/assets/fonts/limkin.ttf");
 			font-weight: 100 900;
 			text-align: center;
 		}
-		
+
+		.limkin-light {
+			font-family: "Limkin", sans-serif;
+			font-variation-settings: "wght" 100, "SRFF" 0;
+			color: white;
+		}
+
 		.limkin-heavy {
 			font-family: "Limkin", sans-serif;
 			font-variation-settings: "wght" 900, "SRFF" 0;
 			color: white;
 		}
 
-        p {
+        .roboto-body {
 			color: white;
 			font-family: "Roboto",
 			monospace;
 			font-weight: 400;
 			font-style: normal;
-		}
-
-
-          body {
-			background-repeat: starrybg.gif;
 		}
 
         
@@ -57,6 +59,7 @@
 <body>
     <main class="content">
         <h2 class="limkin-heavy", center >History of the CYBERCAFE</h2> 
+		<h3 class="limkin-light", center> By Magda Romanska </h3>
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">		
