--- a/v2/index.html
+++ b/v2/index.html
@@ -43,12 +43,13 @@
 			color: white;
 		}
 
-        .roboto-body {
+        p {
 			color: white;
 			font-family: "Roboto",
 			monospace;
 			font-weight: 400;
 			font-style: normal;
+			text-align: center;
 		}
 
         
@@ -65,7 +66,7 @@
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">		
 		  <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
 
-        <p style="text-align: center;">
+        <p>
             Beginning in the 1990s, many traditional cafés began transforming into so-called cybercafés or internet cafés. The transformation once again reestablished the historical role of cafés as places of public discourse, information exchange and communication. Internet cafés provide internet access to their patrons, usually for an hourly fee. Currently there are two types of internet cafés: those that provide computer terminals with internet access, and those that provide Wi-Fi internet access only, to which users connect via their own computers. The first to install internet access in a café was Wayne Gregori, in 1991 in San Francisco. The concept (and the name Cybercafé), however, was developed three years later, in 1994, by Ivan Pope. Commissioned to design the ‘Towards the Aesthetics of the Future’ art event for the Institute of Contemporary Art (ICA) in London, Pope proposed a café with internet access.
 <br>
 <br>
