--- a/v2/index.html
+++ b/v2/index.html
@@ -5,8 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>History of the Cybercafe</title>
 
-	<link rel="https://fonts.googleapis.com/css2?family=Bungee+Tint&display=swap">
-
 	<style>
 
 		{
@@ -31,12 +29,6 @@
 			src: url("/assets/fonts/limkin.ttf");
 			font-weight: 100 900;
 			text-align: center;
-		}
-
-		.bungee-tint-regular {
-			font-family: "Bungee Tint", sans-serif;
-			font-weight: 400;
-			font-style: normal;
 		}
 
 		.limkin-light {
@@ -67,7 +59,7 @@
 </head>
 <body>
     <main class="content">
-        <h2 class="bungee-tint-regular", center>History of the CYBERCAFE</h2> 
+        <h2 class="limkin-heavy", center>History of the CYBERCAFE</h2> 
 		<h3 class="limkin-light", center> By Magda Romanska </h3>
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
