--- a/v2/index.html
+++ b/v2/index.html
@@ -44,7 +44,7 @@
 		}
 
         p {
-			color: white;
+			color: rgb(255, 161, 249);
 			font-family: "Roboto",
 			monospace;
 			font-weight: 400;
@@ -59,7 +59,7 @@
 </head>
 <body>
     <main class="content">
-        <h2 class="limkin-heavy", center>History of the CYBERCAFE</h2> 
+        <h1 class="limkin-heavy", center>History of the CYBERCAFE</h1> 
 		<h3 class="limkin-light", center> By Magda Romanska </h3>
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
      <img src="https://web.archive.org/web/20090821185544im_/http://geocities.com/HotSprings/Resort/4370/computer.gif" width="180px" height="auto">
