--- a/v1/index.html
+++ b/v1/index.html
@@ -9,6 +9,11 @@
         <head> 
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <marquee style="pointer-events: auto;">
+                <code style="pointer-events: auto;">
+                    WELCOME TO MY INTERNET CAFE
+                </code>
+            </marquee>
 
             <h1 style="font-family:georgia;">~*The History of Cybercafé*~</h1>
             <h2 style="font-family:georgia;">
