--- a/v3/index.html
+++ b/v3/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Two Column Article Layout</title>
     <link rel="stylesheet" href="styles.css">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+	
 </head>
 <style>
 	* {
@@ -25,28 +28,85 @@ body {
     display: flex;
     max-width: 1200px;
     margin: 0 auto;
-    background-color: #fff;
-    border-radius: 5px;
+    background-color: #43ddb1;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 40px;
 }
 
 /* Left column for the title and author */
 .left-column {
     flex: 1;
     padding-right: 20px;
-    border-right: 2px solid #ddd;
+    border-right: 2px solid #ffffff;
 }
 
-header h1 {
-    font-size: 2em;
+h1 {
+    font-family: 'Recursive', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+}
+
+.wavy-text {
+    font-size: 4rem;
+    font-weight: 600;
+    display: inline-block;
+    position: relative;
     color: #333;
-    margin-bottom: 10px;
+    animation: wave 3s infinite ease-in-out;
 }
 
 header h3 {
     font-size: 1.2em;
+	font-family: 'Recursive', sans-serif;
     color: #555;
+}
+
+@keyframes wave {
+    0%, 100% {
+        font-variation-settings: "wght" 600, "slnt" 0, "CASL" 0;
+        transform: translateY(0);
+    }
+    25% {
+        font-variation-settings: "wght" 400, "slnt" -10, "CASL" 1;
+        transform: translateY(-10px);
+    }
+    50% {
+        font-variation-settings: "wght" 500, "slnt" -5, "CASL" 0.5;
+        transform: translateY(10px);
+    }
+    75% {
+        font-variation-settings: "wght" 600, "slnt" 5, "CASL" 0.8;
+        transform: translateY(-5px);
+    }
+}
+
+.wavy-text::before, .wavy-text::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    left: 0;
+    transform: translateY(-5px);
+    animation: 3s infinite ease-in-out;
+}
+
+@keyframes shadow {
+    0%, 100% {
+        opacity: 1;
+        transform: translateY(-5px);
+    }
+    50% {
+        opacity: 0;
+        transform: translateY(5px);
+    }
+}
+
+
+p {
+font-family: 'Inter', sans-serif;
+font-weight: 400; /* Bold */
 }
 
 /* Right column for the article text */
@@ -82,7 +142,7 @@ article p {
     <div class="container">
         <div class="left-column">
             <header>
-                <h1>The History of Cybercafé</h1>
+                <h1 class="wavy-text">The History of Cybercafé</h1>
                 <h3>by Magda Romanska</h3>
             </header>
         </div>
